# work-record

./: .cursorrules  generate_summary.bat  generate_summary.sh  index.html  package.json  pnpm-lock.yaml  quick_entry.html  vite.config.ts
src/: main.ts  quick_entry.html  styles.css  theme-manager.ts
src-tauri/: Cargo.toml  README.md  settings.json  tauri.conf.json
src-tauri/src/: app_state.rs  cli.rs  commands.rs  errors.rs  fix_config.rs  git_utils.rs  lib.rs  log_manager.rs  log_summary_cli.rs  main.rs  settings.rs  summary.rs  summary.rs.bak  system_tray.rs
src/components/: header.ts  help-panel.ts  icons.ts  log-entry-form.ts  log-files-panel.ts  log-summary-fixed.ts  log-summary-panel.ts  main-layout.ts  settings-panel.ts
